# htype

./: ChangeLog.md  Makefile  README.md  htype.cabal  stack.yaml  text
app/: Main.hs
src/: HType.hs  Model.hs
