cabal-version:      2.4
name:               htype
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/htype#readme>

homepage:           https://github.com/githubuser/htype#readme
bug-reports:        https://github.com/githubuser/htype/issues
author:             Author name here
maintainer:         example@example.com
copyright:          2021 Author name here
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/githubuser/htype

library
  exposed-modules:  Lib
  hs-source-dirs:   src
  build-depends:
    , base   >=4.7 && <5
    , gloss

  default-language: Haskell2010

executable htype-exe
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base   >=4.7 && <5
    , htype

  default-language: Haskell2010

test-suite htype-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base   >=4.7 && <5
    , htype

  default-language: Haskell2010
